# arcane-lang

./: CLAUDE.md  Cargo.toml  README.md
examples/: hello.arc  math.ark  test_module.ark  test_pipe.ark  test_private.ark
src/: ast.rs  bytecode.rs  compiler.rs  lexer.rs  main.rs  parser.rs  token.rs  value.rs  vm.rs
src/lsp/: analysis.rs  main.rs
vscode-arcane/: package-lock.json  package.json
vscode-arcane/src/: extension.ts
